--- a/memdesk_testng/test-output/old/Default suite/methods-alphabetical.html
+++ b/memdesk_testng/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eda0e0">  <td>19/10/11 15:23:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.memdesk.testcases.HomePageTest@66d33a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@328638398</td>   <td></td> </tr>
-<tr bgcolor="eda0e0">  <td>19/10/11 15:23:56</td>   <td>22896</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyContactPhone()[pri:0, instance:com.qa.memdesk.testcases.HomePageTest@66d33a]">verifyContactPhone</td> 
-  <td>main@328638398</td>   <td></td> </tr>
-<tr bgcolor="eda0e0">  <td>19/10/11 15:23:56</td>   <td>22890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyMemberId()[pri:0, instance:com.qa.memdesk.testcases.HomePageTest@66d33a]">verifyMemberId</td> 
-  <td>main@328638398</td>   <td></td> </tr>
+<tr bgcolor="b7dea0">  <td>19/12/04 18:09:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.memdesk.testcases.LoginPageTest@4cdbe50f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@586617651</td>   <td></td> </tr>
+<tr bgcolor="b7dea0">  <td>19/12/04 18:09:53</td>   <td>38686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.memdesk.testcases.LoginPageTest@4cdbe50f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@586617651</td>   <td></td> </tr>
+<tr bgcolor="b7dea0">  <td>19/12/04 18:09:32</td>   <td>18085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateLoginPageTitle()[pri:0, instance:com.qa.memdesk.testcases.LoginPageTest@4cdbe50f]">validateLoginPageTitle</td> 
+  <td>main@586617651</td>   <td></td> </tr>
 </table>
