--- a/memdesk_testng/test-output/old/FREE CRM Application Test Automation Test Suite/classes.html
+++ b/memdesk_testng/test-output/old/FREE CRM Application Test Automation Test Suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.qa.memdesk.testcases.HomePageTest</td>
+<td>com.qa.memdesk.testcases.LoginPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyContactPhone</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyMemberId</td>
+<td>validateLoginPageTitle</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
