--- a/memdesk_testng/test-output/old/FREE CRM Application Test Automation Test Suite/methods.html
+++ b/memdesk_testng/test-output/old/FREE CRM Application Test Automation Test Suite/methods.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>FREE CRM Application Test Automation Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9061ba">  <td>19/09/11 19:01:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.memdesk.testcases.HomePageTest@3f0ee7cb]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@940553268</td>   <td></td> </tr>
-<tr bgcolor="9061ba">  <td>19/09/11 19:02:14</td>   <td>39313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyMemberId()[pri:0, instance:com.qa.memdesk.testcases.HomePageTest@3f0ee7cb]">verifyMemberId</td> 
-  <td>main@940553268</td>   <td></td> </tr>
-<tr bgcolor="9061ba">  <td>19/09/11 19:02:37</td>   <td>62895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.memdesk.testcases.HomePageTest@3f0ee7cb]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@940553268</td>   <td></td> </tr>
-<tr bgcolor="9061ba">  <td>19/09/11 19:02:38</td>   <td>63643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.qa.memdesk.testcases.HomePageTest@3f0ee7cb]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@940553268</td>   <td></td> </tr>
-<tr bgcolor="9061ba">  <td>19/09/11 19:03:03</td>   <td>88066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyContactPhone()[pri:0, instance:com.qa.memdesk.testcases.HomePageTest@3f0ee7cb]">verifyContactPhone</td> 
-  <td>main@940553268</td>   <td></td> </tr>
-<tr bgcolor="9061ba">  <td>19/09/11 19:03:06</td>   <td>91912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.qa.memdesk.testcases.HomePageTest@3f0ee7cb]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@940553268</td>   <td></td> </tr>
+<tr bgcolor="a18c8f">  <td>19/12/09 19:12:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.qa.memdesk.testcases.LoginPageTest@3f0ee7cb]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
+<tr bgcolor="a18c8f">  <td>19/12/09 19:13:05</td>   <td>24170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.validateLoginPageTitle()[pri:0, instance:com.qa.memdesk.testcases.LoginPageTest@3f0ee7cb]">validateLoginPageTitle</td> 
+  <td>main@540642172</td>   <td></td> </tr>
+<tr bgcolor="a18c8f">  <td>19/12/09 19:13:46</td>   <td>65221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.memdesk.testcases.LoginPageTest@3f0ee7cb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
 </table>
